--- a/src/App.css
+++ b/src/App.css
@@ -210,3 +210,37 @@ h3 {
   background-color: #007bff;
   color: #fff;
 }
+
+
+nav {
+  padding: 10px;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin-right: 20px;
+}
+
+li:last-child {
+  margin-right: 0;
+}
+
+Link {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  font-size: 16px;
+  transition: color 0.3s;
+}
+
+Link:hover {
+  color: #f0f0f0;
+}
